fixes overlapping footer

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,10 +40,12 @@ th {
   min-height: 100vh;
   flex-direction: column;
 
+
 }
 
 .Site-content {
   flex: 1;
+  margin-bottom: 5% !important;
 }
 
 .Ferrari {
